[done] grid item hover effect and [bugfix] item shrink back z-index bug

--- a/public/scss/component/grid.scss
+++ b/public/scss/component/grid.scss
@@ -6,13 +6,20 @@
 	.gf-grid-item{
 		display: block;
 		position: absolute;
+		overflow:hidden;
 		margin:0;
 		padding:0;
 		z-index: 0;
 		transform: translate3d(0,0,0);
 		background-color: map-get($color-teal,'500');
+		text-align: center;
 		// transition here
-		transition: top 0.3s linear, left 0.3s linear,width 0.3s linear, height 0.3s linear;
+		transition: top 0.3s linear, 
+					left 0.3s linear,
+					width 0.3s linear, 
+					height 0.3s linear;
+					// box-shadow 0.3s ease-out,
+					// transform 0.3s ease-out;
 		&.full-screen{
 			position: fixed;
 			z-index: 10;
@@ -29,13 +36,92 @@
 			// transition: none;
 			// animation: item-morph-in 0.4s ease-out;
 			// animation-fill-mode: forwards;
-			&>a{
+			&>figcaption>a{
 				cursor: normal;
 				pointer-events: none;
+			}
+			.item-info-wraper{
+				transition: opacity 1.2s, visibility 0s 1.2s;
+				visibility: hidden;
+				opacity: 0;
 			}
 		}
 	}
 }
+.gf-grid-item{
+	>figcaption>a{
+		display: block;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	.item-info-wraper{
+		width:100%;
+		height: 100%;
+		position: relative;
+	}
+	figcaption::before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: -webkit-linear-gradient(top, rgba(72,76,97,0) 0%, rgba(72,76,97,0.8) 75%);
+		background: linear-gradient(to bottom, rgba(72,76,97,0) 0%, rgba(72,76,97,0.8) 75%);
+		content: '';
+		opacity: 0;
+		-webkit-transform: translate3d(0,50%,0);
+		transform: translate3d(0,50%,0);
+	}
+
+	h2 {
+		margin: 0;
+		position: absolute;
+		top: 50%;
+		left: 0;
+		width: 100%;
+		font-size: 40px;
+		font-weight: bold;
+		color: #484c61;
+		-webkit-transition: -webkit-transform 0.35s, color 0.35s;
+		transition: transform 0.35s, color 0.35s;
+		-webkit-transform: translate3d(0,-50%,0);
+		transform: translate3d(0,-50%,0);
+	}
+
+	figcaption::before,
+	p {
+		-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+		transition: opacity 0.35s, transform 0.35s;
+	}
+
+	p {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		padding: 2em;
+		width: 100%;
+		opacity: 0;
+		-webkit-transform: translate3d(0,10px,0);
+		transform: translate3d(0,10px,0);
+	}
+
+	&:hover h2 {
+		color: #fff;
+		-webkit-transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
+		transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
+	}
+
+	&:hover figcaption::before ,
+	&:hover p {
+		opacity: 1;
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0);
+	}
+}
+
 // @keyframes item-morph-in{
 // 	// 0%{
 // 	// 	width: 100%;
