--- a/public/scss/component/portfolio.scss
+++ b/public/scss/component/portfolio.scss
@@ -32,7 +32,7 @@
 		height: 100%;
 		overflow-y:auto;
 		opacity: 1;
-		transition: visibility 0s 0.3s,opacity 0.4s 0.3s;
+		transition: visibility 0s 0.8s,opacity 0.4s 0.8s;
 	}
 	&>.close-btn{
 		position: absolute;
